Finish styling, add download functionality

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -4,7 +4,6 @@ body {
   text-align: center;
   padding: 15px;
   font-family: sans-serif;
-  -webkit-app-region: drag;
 }
 
 * {
@@ -13,80 +12,76 @@ body {
   box-sizing: border-box;
 }
 
-h1 {
-  margin: 25px;
-  font-size: 24px;
-  display: none;
-}
-
 .app-wrapper {
-  background: #2b2b2b;
-  border-bottom: 3px solid #ee5253;
+  position: relative;
+  background: #253240;
   box-shadow: 0 4px 20px rgba(0, 0, 0, 0.5);
 }
 
 .padding {
-  padding: 25px 45px 45px;
+  padding: 30px 45px 45px;
 }
 
-form {
+.form {
   display: flex;
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.5);
 }
 
-form > input {
+.form > input {
   flex: 1;
   border: none;
   font-size: 16px;
   color: #333;
-  -webkit-app-region: no-drag;
+  border-radius: 3px 0 0 3px;
 }
 
-form > button {
+.form > button {
   background: #ee5253;
   border: none;
   color: #eee;
   font-weight: bold;
   font-size: 16px;
-  -webkit-app-region: no-drag;
+  border-radius: 0 3px 3px 0;
 }
 
-form > input,
-form > button {
+.form > button:disabled {
+  filter: grayscale(50%);
+  cursor: not-allowed;
+}
+
+.form > input,
+.form > button {
   padding: 20px;
+  outline: none;
 }
 
 .display {
   padding: 3px;
   font-size: 14px;
-  border: 1px solid #333;
+  background: rgba(255, 255, 255, 0.025);
   margin-bottom: 25px;
-  color: #999;
+  border-radius: 3px;
 }
 
 .display > p {
   padding: 5px;
-}
-
-.display > p.downloading {
-  color: #fff;
   position: relative;
+  color: rgba(255, 255, 255, 0.35);
 }
 
-.display > p.downloading .progress {
+.progress-bar-wrapper {
   position: absolute;
-  top: 0;
+  bottom: 0;
+  left: 0;
+  height: 5px;
+  width: 100%;
+  background: #19222a;
+}
+
+.progress-bar {
+  position: absolute;
+  bottom: 0;
   left: 0;
   height: 100%;
-  background: #222;
-  z-index: -1;
-}
-
-.display > p.success {
-  background: #27ae60;
-  color: #fff;
-}
-
-.display > p.error {
-  background: #c0392b;
-  color: #fff;
+  background: #ee5253;
 }
