--- a/src/components/title-bar/title-bar.styles.css
+++ b/src/components/title-bar/title-bar.styles.css
@@ -1,14 +1,18 @@
 .title-bar {
   width: 100%;
-  background: #222;
+  background: #19222a;
   padding: 10px 15px;
   display: flex;
   align-items: center;
+  -webkit-app-region: drag;
 }
 
-.title-bar p {
-  font-size: 14px;
-  color: #999;
+.title {
+  font-size: 12px;
+  color: #7b7b7b;
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
 }
 
 .controls {
@@ -17,10 +21,21 @@
 }
 
 .controls button {
-  height: 15px;
-  width: 15px;
-  background: #333;
+  height: 12px;
+  width: 12px;
   border-radius: 50%;
   border: none;
   margin-right: 8px;
+}
+
+.close {
+  background: #ff605c;
+}
+
+.min {
+  background: #ffbd44;
+}
+
+.max {
+  background: #00ca4e;
 }
