--- a/src/components/App.css
+++ b/src/components/App.css
@@ -33,6 +33,7 @@ body {
   font-size: 16px;
   color: #333;
   border-radius: 3px 0 0 3px;
+  background: #f3f3f3;
 }
 
 .form > button {
@@ -84,4 +85,5 @@ body {
   left: 0;
   height: 100%;
   background: #ee5253;
+  transition: width 0.5s;
 }
