--- a/src/components/app.css
+++ b/src/components/app.css
@@ -67,11 +67,14 @@ body {
 }
 
 .display {
-  padding: 3px;
   font-size: 14px;
   background: rgba(255, 255, 255, 0.025);
   margin-bottom: 25px;
   border-radius: 3px;
+  height: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .display > p {
