--- a/src/components/app.css
+++ b/src/components/app.css
@@ -89,7 +89,7 @@ body {
 .display {
   font-size: 14px;
   height: 50px;
-  background: red;
+  background: #c0392b;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -113,7 +113,7 @@ body {
 
 /* Track */
 .downloads::-webkit-scrollbar-track {
-  background: transparent;
+  background: rgba(255, 255, 255, 0.03);
 }
 
 /* Handle */
@@ -135,7 +135,7 @@ body {
 }
 
 .download-item {
-  padding: 20px;
+  padding: 15px;
   display: flex;
   justify-content: space-between;
   border-radius: 5px;
