--- a/src/components/app.css
+++ b/src/components/app.css
@@ -151,10 +151,35 @@ body {
   display: flex;
   justify-content: space-between;
   border-radius: 5px;
-  color: rgba(255, 255, 255, 0.7);
+  color: rgba(255, 255, 255, 0.8);
   font-size: 15px;
 }
 
 .download-item:nth-child(odd) {
   background: rgba(255, 255, 255, 0.05);
+}
+
+.download-title-wrapper {
+  display: flex;
+  align-items: center;
+  width: 60%;
+}
+
+.download-title {
+  width: 100%;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  text-align: left;
+}
+
+.format-tag {
+  background: #fff;
+  padding: 3px 5px;
+  border-radius: 50px;
+  font-size: 10px;
+  font-weight: bold;
+  color: #1d2833;
+  margin-right: 10px;
+  opacity: 0.5;
 }
