--- a/src/components/app.css
+++ b/src/components/app.css
@@ -156,7 +156,7 @@ body {
 }
 
 .download-item:nth-child(odd) {
-  background: rgba(255, 255, 255, 0.05);
+  background: rgba(255, 255, 255, 0.03);
 }
 
 .download-title-wrapper {
@@ -174,12 +174,13 @@ body {
 }
 
 .format-tag {
-  background: #fff;
+  background: #1d2833;
   padding: 3px 5px;
+  border: 1px solid #0e131a;
   border-radius: 50px;
   font-size: 10px;
   font-weight: bold;
-  color: #1d2833;
+  color: #fff;
   margin-right: 10px;
   opacity: 0.5;
 }
